--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@ MYSQL_PORT = your-port
 MYSQL_DB_NAME = your-db-name
 MYSQL_USERNAME = your-username
 MYSQL_PASSWORD = your-password
+
+# jwt secret
+JWT_SECRET = my-secret
